--- a/requirements.txt
+++ b/requirements.txt
@@ -6,5 +6,5 @@ google-cloud-firestore
 gunicorn>=20.1.0
 firebase-admin
 Flask-Login>=0.6.2
-google-generativeai
+google-generativeai==0.3.2  
 python-dotenv
